feat: add stock in medicine